crates/moonwave_shader/src/snapshots/moonwave_shader__test__color_fs.snap
---
source: crates/moonwave_shader/src/test.rs
expression: fs
---
layout (location = 0) in vec4 vs_var_9_0;
layout (location = 0) out vec4 f_color;
void main() {
vec4 var_9_0 = vs_var_9_0;
f_color = var_9_0;
}

