crates/moonwave_shader/src/snapshots/moonwave_shader__test__normal_fs.snap
---
source: crates/moonwave_shader/src/test.rs
expression: normal_out.1
---
layout (location = 0) out vec4 f_color;
layout (location = 1) out vec4 f_normal;
void main() {
  vec4 node_3_output = vec4(1.0000000, 1.0000000, 1.0000000, 1.0000000);
  f_normal = node_3_output;

}

