crates/moonwave_shader/src/snapshots/moonwave_shader__test__simple.snap
---
source: crates/moonwave_shader/src/test.rs
expression: "vec![built, built_color, built_normal]"
---
[
    BuiltShaderGraph {
        vs: "layout (location = 0) in vec3 a_position;\nlayout (location = 1) in vec2 a_uv;\nlayout (location = 0) out vec4 vs_var_9_0;\nvoid main() {\nfloat var_4_0 = float(1.0000000);\nvec3 var_5_0 = vec3(0.0000000,1.0000000,2.0000000);\nvar_0_0 = a_position;\nvar_0_1 = a_uv;\nvec3 var_7_0 = var_0_0 * var_5_0;\nvec4 var_8_0 = var_7_0[0];\nvec4 var_8_1 = var_7_0[1];\nvec4 var_8_2 = var_7_0[2];\nvec4 var_8_3 = var_7_0[3];\nvec4 var_9_0 = vec4(var_8_0,var_8_1,var_8_2,var_4_0);\ngl_Position = var_9_0;\nvs_var_9_0 = var_9_0;\n}\n",
        fs: "layout (location = 0) in vec4 vs_var_9_0;\nlayout (location = 0) out vec4 f_color;\nlayout (location = 1) out vec4 f_normal;\nvoid main() {\nvec4 var_9_0 = vs_var_9_0;\nvec4 var_6_0 = vec4(1.0000000,1.0000000,1.0000000,1.0000000);\nf_normal = var_6_0;\nf_color = var_9_0;\n}\n",
        required_uniforms: [],
    },
    BuiltShaderGraph {
        vs: "layout (location = 0) in vec3 a_position;\nlayout (location = 1) in vec2 a_uv;\nlayout (location = 0) out vec4 vs_var_9_0;\nvoid main() {\nfloat var_4_0 = float(1.0000000);\nvec3 var_5_0 = vec3(0.0000000,1.0000000,2.0000000);\nvar_0_0 = a_position;\nvar_0_1 = a_uv;\nvec3 var_7_0 = var_0_0 * var_5_0;\nvec4 var_8_0 = var_7_0[0];\nvec4 var_8_1 = var_7_0[1];\nvec4 var_8_2 = var_7_0[2];\nvec4 var_8_3 = var_7_0[3];\nvec4 var_9_0 = vec4(var_8_0,var_8_1,var_8_2,var_4_0);\ngl_Position = var_9_0;\nvs_var_9_0 = var_9_0;\n}\n",
        fs: "layout (location = 0) in vec4 vs_var_9_0;\nlayout (location = 0) out vec4 f_color;\nvoid main() {\nvec4 var_9_0 = vs_var_9_0;\nf_color = var_9_0;\n}\n",
        required_uniforms: [],
    },
    BuiltShaderGraph {
        vs: "layout (location = 0) in vec3 a_position;\nlayout (location = 1) in vec2 a_uv;\nvoid main() {\nfloat var_4_0 = float(1.0000000);\nvec3 var_5_0 = vec3(0.0000000,1.0000000,2.0000000);\nvar_0_0 = a_position;\nvar_0_1 = a_uv;\nvec3 var_7_0 = var_0_0 * var_5_0;\nvec4 var_8_0 = var_7_0[0];\nvec4 var_8_1 = var_7_0[1];\nvec4 var_8_2 = var_7_0[2];\nvec4 var_8_3 = var_7_0[3];\nvec4 var_9_0 = vec4(var_8_0,var_8_1,var_8_2,var_4_0);\ngl_Position = var_9_0;\n}\n",
        fs: "layout (location = 0) out vec4 f_normal;\nvoid main() {\nvec4 var_6_0 = vec4(1.0000000,1.0000000,1.0000000,1.0000000);\nf_normal = var_6_0;\n}\n",
        required_uniforms: [],
    },
]
